@@ -17,10 +17,8 @@ package org.optaplanner.core.impl.score.director.drools.testgen;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
-import java.io.StringReader;
 import java.io.StringWriter;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -34,6 +32,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
+import org.assertj.core.api.SoftAssertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 import org.optaplanner.core.api.score.buildin.simple.SimpleScore;
@@ -68,7 +67,7 @@ public class TestGenTestWriterTest {
         TestGenTestWriter writer = new TestGenTestWriter();
         writer.setClassName("TestGenWriterOutput");
         writer.setScoreDefinition(new SimpleScoreDefinition());
-        writer.setScoreDrlFileList(Arrays.asList(new File(DRL_FILE_PATH)));
+        writer.setScoreDrlFileList(List.of(new File(DRL_FILE_PATH)));
         writer.setScoreDrlList(Arrays.asList("x", "y"));
         writer.setConstraintMatchEnabled(true);
         writer.setCorruptedScoreException(new TestGenCorruptedScoreException(
@@ -101,7 +100,7 @@ public class TestGenTestWriterTest {
         TestClassWithDateField entity = new TestClassWithDateField();
         Date now = new Date();
         entity.setDate(now);
-        journal.addFacts(Arrays.asList(entity));
+        journal.addFacts(List.of(entity));
 
         TestGenTestWriter writer = new TestGenTestWriter();
         writer.setClassName("TestGenWriterOutput");
@@ -119,19 +118,26 @@ public class TestGenTestWriterTest {
     private static void checkOutput(Path expected, String actual) throws IOException {
         // first detect different lines
         List<String> expectedLines = Files.readAllLines(expected, StandardCharsets.UTF_8);
-        List<String> actualLines = new BufferedReader(new StringReader(actual)).lines().collect(Collectors.toList());
-        for (int i = 0; i < Math.min(expectedLines.size(), actualLines.size()); i++) {
-            String expectedLine = StringUtils.replace(expectedLines.get(i),
-                    DRL_FILE_PLACEHOLDER, new File(DRL_FILE_PATH).getAbsolutePath());
-            assertThat(actualLines.get(i)).isEqualTo(expectedLine).withFailMessage("At line " + (i + 1));
-        }
+        List<String> actualLines = actual.lines().collect(Collectors.toList());
+        SoftAssertions.assertSoftly(softly -> {
+            for (int i = 0; i < Math.min(expectedLines.size(), actualLines.size()); i++) {
+                String expectedLine = StringUtils.replace(expectedLines.get(i), DRL_FILE_PLACEHOLDER,
+                        new File(DRL_FILE_PATH).getAbsolutePath());
+                softly.assertThat(actualLines.get(i))
+                        .withFailMessage("Mismatch at line %d.\n" +
+                                "  Expected: '%s'.\n" +
+                                "   But was: '%s'.", i + 1,
+                                expected, actualLines.get(i))
+                        .isEqualTo(expectedLine);
+            }
+        });
 
         // then check line counts are the same
         assertThat(actualLines).hasSameSizeAs(expectedLines);
 
         // finally check the whole string
-        String expectedString = StringUtils.replace(new String(Files.readAllBytes(expected), StandardCharsets.UTF_8),
-                DRL_FILE_PLACEHOLDER, new File(DRL_FILE_PATH).getAbsolutePath());
+        String expectedString = StringUtils.replace(Files.readString(expected, StandardCharsets.UTF_8), DRL_FILE_PLACEHOLDER,
+                new File(DRL_FILE_PATH).getAbsolutePath());
         assertThat(actual).isEqualTo(expectedString);
     }
 
